--- a/src/index.css
+++ b/src/index.css
@@ -59,11 +59,19 @@ body {
 }
 
 .loader {
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 2rem;
-  font-weight: 600;
-  margin: 4.8rem;
+  margin: 48px auto;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 8px solid;
+  border-color: var(--color-text-dark);
+  border-right-color: var(--color-primary);
+  animation: s2 1s infinite linear;
+}
+@keyframes s2 {
+  to {
+    transform: rotate(1turn);
+  }
 }
 
 .error {
